--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "react-toastify": "^10.0.4",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
